fix save progress race condition; wrap toolbar for mobile

--- a/overlay.css
+++ b/overlay.css
@@ -82,7 +82,7 @@
     top: 0;
     z-index: 2;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
     gap: 0 4px;
     margin-top: 3px;
@@ -166,15 +166,21 @@
     background: transparent;
 }
 #rv-voice {
-    display: inline !important;
+    margin-left: 8px;
 }
 #rv-speed {
     width: 120px;
     margin-left: 8px;
+    margin-right: 0px;
 }
 html.rv-active,
 html.rv-active body {
     overflow: hidden !important;
+}
+#rv-tts {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 0 4px;
 }
 .rv-tts-active {
     background: rgba(255, 255, 0, 0.3) !important;
@@ -198,7 +204,7 @@ html.rv-active body {
 }
 #rv-speed-label {
     width: 3em;
-    margin-left: 4px;
+    margin-left: 0px;
     margin-right: 2px;
 }
 .rv-tts-highlight{
